load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")

package(default_visibility = ["//visibility:public"])

alias(
    name = "doc_gen",
    actual = "//doc:gen",
)

alias(
    name = "fare_publish",
    actual = "//redotech/publish:fare_publish",
)

alias(
    name = "lint",
    actual = "//tools/lint",
)

alias(
    name = "dts",
    actual = "//tools/typescript:libs_dts",
)

alias(
    name = "nodejs_install",
    actual = "//tools/nodejs:install",
)

alias(
    name = "npm_resolve",
    actual = "//tools/npm:resolve",
)

alias(
    name = "refresh",
    actual = "//tools/bazel:refresh",
)

cjs_root(
    name = "root",
    package_name = "@redotech/_root",
)

js_library(
    name = "eslint_config",
    srcs = [".eslintrc.js"],
    root = ":root",
)

js_library(
    name = "prettier_config",
    srcs = [".prettierrc.yaml"],
    root = ":root",
    deps = [
        "@npm//prettier-plugin-organize-imports:lib",
        "@npm//prettier-plugin-sort-json:lib",
    ],
)
