load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    depends = [
        "curl",
        "jq",
    ],
    description = "GitHub Actions Runner",
    maintainer = "Redo Tech",
    package = "actions-runner",
    package_file_name = "actions-runner.deb",
    postinst = "deb/postinst",
    postrm = "deb/postrm",
    preinst = "deb/preinst",
    version_file = "//tools/deb:version",
)

pkg_files(
    name = "files",
    srcs = [
        "actions-runner.service",
        "actions-runner-config.service",
    ],
    renames = {
        "actions-runner.service": "/usr/lib/systemd/system/actions-runner.service",
        "actions-runner-config.service": "/usr/lib/systemd/system/actions-runner-config.service",
    },
)

pkg_tar(
    name = "tar",
    srcs = [
        ":files",
    ],
)
