load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    depends = [
        "curl",
    ],
    description = "GitHub Actions Runner",
    maintainer = "Redo Tech",
    package = "actions-runner",
    package_file_name = "actions-runner.deb",
    postinst = "deb/postinst.sh",
    postrm = "deb/postrm.sh",
    preinst = "deb/preinst.sh",
    version_file = "//tools/deb:version",
)

pkg_files(
    name = "files",
    srcs = [
        "actions-runner.service",
    ],
    renames = {
        "actions-runner.service": "/usr/lib/systemd/system/actions-runner.service",
    },
)

pkg_tar(
    name = "tar",
    srcs = [
        ":files",
    ],
)
