load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//bazel/rules:rules.bzl", "build_setting_file")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "s3_url",
    build_setting_default = "https://example-bucket.s3.example-region.amazonaws.com/",
)

build_setting_file(
    name = "s3_url_file",
    out = "s3-url.txt",
    content = ":s3_url",
)
