load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//bazel/rules:rules.bzl", "build_setting_file")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "files",
    srcs = [
        ":region_file",
        ":s3_bucket_file",
        ":s3_key_prefix_file",
    ],
)

string_flag(
    name = "region",
    build_setting_default = "example-region",
)

build_setting_file(
    name = "region_file",
    out = "region.txt",
    content = ":region",
)

string_flag(
    name = "s3_bucket",
    build_setting_default = "example-bucket",
)

build_setting_file(
    name = "s3_bucket_file",
    out = "s3-bucket.txt",
    content = ":s3_bucket",
)

string_flag(
    name = "s3_key_prefix",
    build_setting_default = "",
)

build_setting_file(
    name = "s3_key_prefix_file",
    out = "s3-key-prefix.txt",
    content = ":s3_key_prefix",
)
