load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")
load("@better_rules_javascript//typescript:rules.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "s3_url",
    srcs = ["//aws/artifact:s3-url.txt"],
    prefix = "lib",
    root = ":root",
    strip_prefix = "/aws/artifact",
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    declaration_prefix = "lib",
    js_prefix = "lib",
    root = ":root",
    strip_prefix = "src",
    deps = [
        ":s3_url",
        "@npm//@types/node:lib",
        "@npm//aws-cdk-lib:lib",
        "@npm//constructs:lib",
    ],
)

cjs_root(
    name = "root",
    package_name = "@redotech/cdk-util",
    descriptors = ["package.json"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:lib"],
)
