load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    description = "awscurl",
    maintainer = "Redo Tech",
    package = "awscurl",
    package_file_name = "awscurl.deb",
    section = "contrib/net",
    version_file = "//tools/deb:version",
)

pkg_files(
    name = "execs",
    srcs = [
        "@awscurl_linux_amd64//:awscurl",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {
        "@awscurl_linux_amd64//:awscurl": "/usr/bin/awscurl",
    },
)

pkg_tar(
    name = "tar",
    srcs = [
        ":execs",
    ],
)
