load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    depends = [
        "curl",
        "sigv4",
    ],
    description = "AWS API Gateway Execute API",
    maintainer = "Redo Tech",
    package = "aws-execute-api",
    version = "1.0.0",
)

pkg_files(
    name = "execs",
    srcs = [
        "aws-execute-api",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {
        "aws-execute-api": "/usr/bin/aws-execute-api",
    },
)

pkg_tar(
    name = "tar",
    srcs = [
        ":execs",
    ],
)
