load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")
load("@better_rules_javascript//typescript:rules.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    declaration_prefix = "lib",
    js_prefix = "lib",
    root = ":root",
    strip_prefix = "src",
    deps = [
        "//aws/client:lib",
        "//javascript/temporal-types:lib",
        "//javascript/util:lib",
        "@npm//@aws-sdk/client-sqs:lib",
        "@npm//@aws-sdk/client-ssm:lib",
        "@npm//@aws-sdk/util-arn-parser:lib",
        "@npm//@types/aws-lambda:lib",
        "@npm//@types/node:lib",
    ],
)

cjs_root(
    name = "root",
    package_name = "@redotech/lambda",
    descriptors = ["package.json"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:lib"],
)
