load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    depends = [
        "curl",
    ],
    description = "Instance Metadata Service client",
    maintainer = "Redo Tech",
    package = "imds-client",
    package_file_name = "imds-client.deb",
    section = "contrib/utils",
    version_file = "//tools/deb:version",
)

pkg_files(
    name = "execs",
    srcs = [
        "imds",
        "imds-session",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {
        "imds": "/usr/bin/imds",
        "imds-session": "/usr/bin/imds-session",
    },
)

pkg_tar(
    name = "tar",
    srcs = [
        ":execs",
    ],
)
