load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    depends = ["iptables-persistent"],
    description = "AWS network utilities",
    maintainer = "Redo Tech",
    package = "aws-network",
    version = "1.0.0",
)

pkg_files(
    name = "scripts",
    srcs = [
        "metadata-secure",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {"metadata-secure": "/usr/sbin/metadata-secure"},
)

pkg_tar(
    name = "tar",
    srcs = [
        ":scripts",
    ],
)
