load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    depends = ["iptables"],
    description = "AWS network utilities",
    maintainer = "Redo Tech",
    package = "aws-network",
    package_file_name = "aws-network.deb",
    postinst = "deb/postinst",
    section = "contrib/net",
    version_file = "//tools/deb:version",
)

pkg_files(
    name = "files",
    srcs = [
        "metadata-secure.service",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {"metadata-secure.service": "/etc/systemd/system/metadata-secure.service"},
)

pkg_files(
    name = "execs",
    srcs = [
        "metadata-secure",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {"metadata-secure": "/usr/sbin/metadata-secure"},
)

pkg_tar(
    name = "tar",
    srcs = [
        ":execs",
        ":files",
    ],
)
