load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    architecture = "amd64",
    data = ":tar",
    description = "Sigv4",
    maintainer = "Redo Tech",
    package = "sigv4",
    version = "0.1.0",
)

pkg_files(
    name = "execs",
    srcs = [
        "@sigv4_linux_x86_64//:sigv4",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {
        "@sigv4_linux_x86_64//:sigv4": "/usr/bin/sigv4",
    },
)

pkg_tar(
    name = "tar",
    srcs = [
        ":execs",
    ],
)
