load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")
load("@better_rules_javascript//nodejs:rules.bzl", "nodejs_binary")
load("@better_rules_javascript//typescript:rules.bzl", "ts_library")
load("//aws/cdk-rules:rules.bzl", "cdk_project", "cdk_synth")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "assets",
    srcs = glob(["lib/**/*.tpl"]),
)

cdk_synth(
    name = "cluster_cf",
    project = ":cdk",
    stack = "Cluster",
)

nodejs_binary(
    name = "bin",
    dep = ":lib",
    main = "lib/main.js",
)

cdk_project(
    name = "cdk",
    bin = ":bin",
    cdk = "//tools/cdk",
    config = "cdk.json",
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    declaration_prefix = "lib",
    js_prefix = "lib",
    root = ":root",
    strip_prefix = "src",
    deps = [
        ":assets",
        "//aws/cdk-util:lib",
        "//fare/infra:lib",
        "@npm//@types/node:lib",
        "@npm//aws-cdk-lib:lib",
        "@npm//constructs:lib",
        "@npm//yaml:lib",
    ],
)

cjs_root(
    name = "root",
    package_name = "@redotech/fare-basic-infra",
    descriptors = ["package.json"],
)

cdk_synth(
    name = "provisioner_cf",
    project = ":cdk",
    stack = "Provisioner",
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:lib"],
)
