load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    depends = [
        "actions-runner",
        "aws-network",
        "fare-create",
        "fluent-bit",
    ],
    description = "Fast Actions Runner for EC2 Basic",
    maintainer = "Redo Tech",
    package = "fare-basic",
    package_file_name = "fare-basic.deb",
    version_file = "//tools/deb:version",
)

pkg_tar(
    name = "tar",
)
