load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    depends = [
        "amazon-ec2-utils",
        "awscurl",
        # "curl",
    ],
    description = "Fast Actions Runner for EC2 Create",
    enhances = ["actions-runner"],
    maintainer = "Redo Tech",
    package = "fare-create",
    package_file_name = "fare-create.deb",
    postinst = "deb/postinst.sh",
    recommends = ["actions-runner"],
    version_file = "//tools/deb:version",
)

pkg_files(
    name = "files",
    srcs = [
        "actions-runner-10.conf",
        "actions-runner-config-10.conf",
        "fare-create.preset",
        "fare-create.service",
    ],
    renames = {
        "actions-runner-10.conf": "/etc/systemd/system/actions-runner.service.d/10-fare.conf",
        "actions-runner-config-10.conf": "/etc/systemd/system/actions-runner-config.service.d/10-fare.conf",
        "fare-create.preset": "/usr/lib/systemd/system-preset/fare-create-50.preset",
        "fare-create.service": "/usr/lib/systemd/system/fare-create.service",
    },
)

pkg_files(
    name = "execs",
    srcs = [
        "fare-create",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {
        "fare-create": "/usr/lib/fare-create/create",
    },
)

pkg_tar(
    name = "tar",
    srcs = [
        ":execs",
        ":files",
    ],
)
