load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")
load("@better_rules_javascript//typescript:rules.bzl", "ts_library")
load("//aws/rules:rules.bzl", "lambda_nodejs_function")

package(default_visibility = ["//visibility:public"])

lambda_nodejs_function(
    name = "function",
    dep = ":lib",
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    declaration_prefix = "lib",
    js_prefix = "lib",
    root = ":root",
    strip_prefix = "src",
    deps = [
        "//aws/dynamodb:lib",
        "//aws/function:lib",
        "//aws/util:lib",
        "//github/webhook:lib",
        "//javascript/temporal-types:lib",
        "//javascript/util:lib",
        "@npm//@aws-sdk/client-dynamodb:lib",
        "@npm//@aws-sdk/client-ec2:lib",
        "@npm//@aws-sdk/client-lambda:lib",
        "@npm//@aws-sdk/client-sqs:lib",
        "@npm//@aws-sdk/client-ssm:lib",
        "@npm//@aws-sdk/client-sts:lib",
        "@npm//@aws-sdk/util-arn-parser:lib",
        "@npm//@octokit/auth-app:lib",
        "@npm//@octokit/request-error:lib",
        "@npm//@octokit/rest:lib",
        "@npm//@octokit/webhooks-types:lib",
        "@npm//@smithy/types:lib",
        "@npm//@types/aws-lambda:lib",
        "@npm//@types/node:lib",
        "@npm//temporal-polyfill:lib",
    ],
)

cjs_root(
    name = "root",
    package_name = "@redotech/fare-provision",
    descriptors = ["package.json"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:lib"],
)
